gcp/two-tier-vpc-cpx-adm/LogProxy_Kube/webapps/python_apps.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: amazon 
  labels:
      name: amazon
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: amazon
    spec:
      containers:
      - name: amazon
        #image: in-docker-reg.eng.citrite.net/cpx-dev/amazon:v14
        image: quay.io/citrix-duke/watch-store:latest
        ports:
        - name: amazon-1719
          containerPort: 1719
---
apiVersion: v1
kind: Service
metadata:
  name: amazon
spec:
  clusterIP: None
  ports:
  - name: amazon-1719
    port: 1719
    ##targetPort: 1719
  selector:
    name: amazon
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fasttrack
  labels:
      name: fasttrack
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: fasttrack
    spec:
      containers:
      - name: fasttrack
        #image: in-docker-reg.eng.citrite.net/cpx-dev/fasttrack:v8
        image: quay.io/citrix-duke/watch-brand-1:latest
        ports:
        - name: fasttrack-1720
          containerPort: 1720
---
apiVersion: v1
kind: Service
metadata:
  name: fasttrack
spec:
  clusterIP: None
  ports:
  - name: fasttrack-1720
    port: 1720
    #targetPort: 1720
  selector:
    name: fasttrack
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: titan
  labels:
      name: titan
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: titan
    spec:
      containers:
      - name: titan
        #image: in-docker-reg.eng.citrite.net/cpx-dev/titan:v8
        image: quay.io/citrix-duke/watch-brand-2:latest
        ports:
        - name: titan-1721
          containerPort: 1721
---
apiVersion: v1
kind: Service
metadata:
  name: titan
spec:
  clusterIP: None 
  ports:
  - name: titan-1721
    port: 1721
    #targetPort: 1721
  selector:
    name: titan
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: casio 
  labels:
      name: casio
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: casio
    spec:
      containers:
      - name: casio
        #image: in-docker-reg.eng.citrite.net/cpx-dev/casio:v8
        image: quay.io/citrix-duke/watch-brand-3:latest
        ports:
        - name: casio-1722
          containerPort: 1722
---
apiVersion: v1
kind: Service
metadata:
  name: casio
spec:
  clusterIP: None
  ports:
  - name: casio-1722
    port: 1722
    #targetPort: 1722
  selector:
    name: casio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonata 
  labels:
      name: sonata
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: sonata
    spec:
      containers:
      - name: sonata
        #image: in-docker-reg.eng.citrite.net/cpx-dev/sonata:v8
        image: quay.io/citrix-duke/watch-brand-4:latest
        ports:
        - name: sonata-1723
          containerPort: 1723
---
apiVersion: v1
kind: Service
metadata:
  name: sonata
spec:
  clusterIP: None
  ports:
  - name: sonata-1723
    port: 1723
    #targetPort: 1723
  selector:
    name: sonata
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: watches-ingress
  annotations:
   #ingress.citrix.com/insecure-termination: “allow” 
   ingress.citrix.com/insecure-termination: "allow"
   kubernetes.io/ingress.class: "watches-ingress"
   #ingress.citrix.com/servicegroup: '{"amazon":{"maxclient": 50},"fasttrack":{"maxclient": 50},"titan":{"maxclient": 50},"casio":{"maxclient": 50},"sonata":{"maxclient": 50}}'
spec:
      tls:
       - secretName: ing
      rules:
       - host: watches-amazon.tracing.svc.cluster.local
         http:
          paths:
          - path: /serial/view/watches
            backend:
              serviceName: amazon 
              servicePort: 1719
       - host: watches-amazon.tracing.svc.cluster.local
         http:
          paths:
          - path: /fasttrack/get
            backend:
              serviceName: fasttrack
              servicePort: 1720
       - host: watches-amazon.tracing.svc.cluster.local
         http:
          paths:
          - path: /titan/get
            backend:
              serviceName: titan
              servicePort: 1721
       - host: watches-amazon.tracing.svc.cluster.local
         http:
          paths:
          - path: /casio/get
            backend:
              serviceName: casio
              servicePort: 1722
       - host: watches-amazon.tracing.svc.cluster.local
         http:
          paths:
          - path: /sonata/get
            backend:
              serviceName: sonata
              servicePort: 1723
